# onyx

./: .bazelignore  .bazelrc  .eslintrc.js  .eslintrc.json  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  build.js  eslint.config.mjs  jest.config.ts  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  node.js.yml
.husky/: pre-commit
tools/: deps.bzl  index.bzl  jest.bzl  typescript.bzl
