load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

exports_files([
    "tsconfig.json",
    "tsconfig.eslint.json",
    ".eslintrc.js",
    ".eslintignore",
])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "jest_config",
    srcs = ["jest.config.ts"],
    tsconfig = {},
    deps = [
        "//:node_modules/@jest/types"
    ],
)
